--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         "
                         >About</a
                       ><a
-                        href="#boshi-links"
+                        href="#rdegens-links"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -392,7 +392,7 @@
             </div>
           </div>
         </section>
-        <section id="boshi-links" class="section is-blue-gradient">
+        <section id="rdegens-links" class="section is-blue-gradient">
           <div class="padding-global">
             <div class="container-large">
               <div class="content-wrapper">
