--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  data-wf-domain="www.com"
+  data-wf-domain="www.basedsatoshi.com"
   data-wf-page="6639ca5d7c615dc86ea0b584"
   data-wf-site="6639ca5d7c615dc86ea0b578"
   class="w-mod-js wf-play-n4-active wf-play-n7-active wf-active w-mod-ix"
@@ -80,7 +80,7 @@
                 <div class="content-wrapper">
                   <div class="_2-columns is-header">
                     <a
-                      href="#home"
+                      href="https://www.basedsatoshi.com/"
                       aria-current="page"
                       class="logo w-nav-brand w--current"
                       aria-label="home"
@@ -88,7 +88,7 @@
                     /></a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
                       <a
-                        href="#about-us"
+                        href="https://www.basedsatoshi.com/#about-us"
                         class="nav-link is-first w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -98,7 +98,7 @@
                         "
                         >About</a
                       ><a
-                        href="#boshi-links"
+                        href="https://www.basedsatoshi.com/#boshi-links"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -108,7 +108,7 @@
                         "
                         >Socials</a
                       ><a
-                        href="#join-community"
+                        href="https://www.basedsatoshi.com/#join-community"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -118,7 +118,7 @@
                         "
                         >Community</a
                       ><a
-                        href="#faqs"
+                        href="https://www.basedsatoshi.com/#"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -154,7 +154,7 @@
                         data-duration="0"
                         data-ix2-initial-state="0"
                       >
-                        <!-- <svg
+                        <svg
                           xmlns="http://www.w3.org/2000/svg"
                           xmlns:xlink="http://www.w3.org/1999/xlink"
                           viewBox="0 0 400 400"
@@ -279,7 +279,7 @@
                               </g>
                             </g>
                           </g>
-                        </svg> -->
+                        </svg>
                       </div>
                     </div>
                   </div>
@@ -359,7 +359,15 @@
                         We are a community not a just a memecoin. We'll lanuched
                         so many projects and tokens in the future.
                       </p>
-                      <div class="p bold-text">The ticker is $RDEGEN</div>
+                      <div class="p bold-text">
+                        The ticker is
+                        <a
+                          href="https://pump.fun/6grmGTVLF5agWS6eKdsNAQxZUWZGva3iAy4SuBrQpump"
+                          target="_blank"
+                          style="color: white"
+                          >$RDEGEN</a
+                        >
+                      </div>
                     </div>
                   </div>
                   <div class="column-larger">
@@ -450,7 +458,7 @@
                               rotateZ(0deg) skew(0deg, 0deg);
                             transform-style: preserve-3d;
                           "
-                          href="#"
+                          href="https://x.com/RealDegensToken"
                           target="_blank"
                           class="social-item w-inline-block"
                           ><img
@@ -468,7 +476,7 @@
                               rotateZ(0deg) skew(0deg, 0deg);
                             transform-style: preserve-3d;
                           "
-                          href="#"
+                          href="https://t.me/+TY9H8WdYWrpiMzIx"
                           target="_blank"
                           class="social-item is-tg w-inline-block"
                           ><img
@@ -498,8 +506,9 @@
                               https://cdn.prod.website-files.com/6639ca5d7c615dc86ea0b578/66a069d22f7fa203709cf828_dex-screener-seeklogo.png       2000w
                             "
                             alt=""
-                            class="social" /></a
-                        ><a
+                            class="social"
+                        /></a>
+                        <a
                           data-w-id="d0d96363-3282-6625-8ad0-98ac52049053"
                           style="
                             opacity: 0;
@@ -508,11 +517,11 @@
                               rotateZ(0deg) skew(0deg, 0deg);
                             transform-style: preserve-3d;
                           "
-                          href="#"
+                          href="https://pump.fun/6grmGTVLF5agWS6eKdsNAQxZUWZGva3iAy4SuBrQpump"
                           target="_blank"
                           class="social-item is-dext w-inline-block"
                           ><img
-                            src="assets/images/icons/66a069e1a276fe30cfccfa1d_dextools-seeklogo.svg"
+                            src="assets/images/pumpfun.webp"
                             loading="lazy"
                             alt=""
                             class="social"
@@ -549,6 +558,109 @@
             </div>
           </div>
         </section>
+        <!-- <section id="boshi-nft" class="section is-comic_bg">
+          <div class="padding-global nft">
+            <div class="container-small">
+              <div class="content-wrapper">
+                <div
+                  data-w-id="3eccf005-cf86-c5d9-22e2-ad891f5137f9"
+                  style="
+                    opacity: 1;
+                    transform: translate3d(0px, 0px, 0px)
+                      scale3d(0.823458, 0.823458, 1) rotateX(0deg) rotateY(0deg)
+                      rotateZ(0deg) skew(0deg, 0deg);
+                    transform-style: preserve-3d;
+                  "
+                  class="white-box"
+                >
+                  <div class="gallery-line">
+                    <img
+                      src="assets/images/icons//6639d2d6254c7e96560bc616_Rectangle 3.jpg"
+                      loading="lazy"
+                      id="w-node-b79746eb-42c5-41da-07c9-e22f3d3a8e3b-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d60d5ea969bc678ce7_Rectangle 2.jpg"
+                      loading="lazy"
+                      id="w-node-_2d533694-257a-0712-baca-8d70fc96ea1e-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d6345eb6d286cdb706_Rectangle 4.jpg"
+                      loading="lazy"
+                      id="w-node-_13d280aa-cae0-b23e-b5bd-b599c42730e4-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d6aacfa92182df1b09_Rectangle 5.jpg"
+                      loading="lazy"
+                      id="w-node-_14094e56-9ab6-f0a3-bb87-174dfc29568f-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d6b2756adea2ab1fc5_Rectangle 6.jpg"
+                      loading="lazy"
+                      id="w-node-a480bb69-b1cc-7a7d-5057-fabedfc36f5b-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d660cb57c5179a9b33_Rectangle 7.jpg"
+                      loading="lazy"
+                      id="w-node-_432f8f70-e930-b136-4134-6d520726473a-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d77e4139412645a02e_Rectangle 8.jpg"
+                      loading="lazy"
+                      id="w-node-_17fab4fa-96fe-5e1b-bb16-2dbbf8f0728e-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d666343b534fa93356_Rectangle 9.jpg"
+                      loading="lazy"
+                      id="w-node-a2954fb2-b4d8-640a-bc7c-3fb99c0e32d5-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d65145b2e008ae1f16_Rectangle 10.jpg"
+                      loading="lazy"
+                      id="w-node-edf4b3ad-a21e-7db9-5088-08d6232e68dc-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    /><img
+                      src="assets/images/icons//6639d2d6345eb6d286cdb763_Rectangle 11.jpg"
+                      loading="lazy"
+                      id="w-node-_782a63c6-3f16-e644-bdc8-bf0d6b9e3f52-6ea0b584"
+                      alt=""
+                      class="img_gallery"
+                    />
+                  </div>
+                  <div class="heading_white-box">
+                    <h2
+                      data-w-id="70aee9bf-1254-f430-f92d-08c3282a637a"
+                      style="opacity: 0"
+                      class="heading-3"
+                    >
+                      The First multi-chain
+                      <span class="multi">base</span> project. <br />
+                    </h2>
+                  </div>
+                  <div
+                    data-w-id="44e1e4fa-5fda-16f8-93c2-7b8113b29f13"
+                    style="opacity: 0"
+                    class="text_white-box"
+                  >
+                    <p>
+                      Enhanced accessibility and unparalleled market reach. This
+                      is how we achieve true liquidity mastery
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section> -->
         <section id="decentralization" class="section-unique">
           <div class="padding-global">
             <div class="container-large">
@@ -687,7 +799,7 @@
                         </p>
                       </div>
                       <a
-                        href="https://t.me/+1ZQd22t3mydiNjIx"
+                        href="https://t.me/+TY9H8WdYWrpiMzIx"
                         target="_blank"
                         class="button is-white w-button"
                         >JOIN THE COMMUNITY</a
@@ -714,7 +826,7 @@
               </div>
             </div>
           </div>
-          <div class="padding-global" id="faqs">
+          <div class="padding-global">
             <div class="container-extra-large">
               <div class="content-wrapper">
                 <div
@@ -860,7 +972,7 @@
                             /></div></a
                         ><a
                           style="color: rgb(255, 255, 255)"
-                          href="https://t.me/+1ZQd22t3mydiNjIx"
+                          href="https://t.me/+TY9H8WdYWrpiMzIx"
                           target="_blank"
                           class="link-block w-inline-block"
                           ><div>Telegram</div>
