--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html
-  data-wf-domain="www.basedsatoshi.com"
+  data-wf-domain="www.com"
   data-wf-page="6639ca5d7c615dc86ea0b584"
   data-wf-site="6639ca5d7c615dc86ea0b578"
   class="w-mod-js wf-play-n4-active wf-play-n7-active wf-active w-mod-ix"
