--- a/index.html
+++ b/index.html
@@ -127,7 +127,16 @@
                           transform-style: preserve-3d;
                         "
                         >FAQs</a
-                      >
+                      ><a
+                        href="#faqs"
+                        class="nav-link w-nav-link"
+                        style="
+                          transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
+                            rotateX(0deg) rotateY(0deg) rotateZ(0deg)
+                            skew(0deg, 0deg);
+                          transform-style: preserve-3d;
+                        "
+                        >Tokens Collection</a
                     </nav>
                     <div
                       data-w-id="ff0c72f2-1607-df54-fc69-c90878c32baa"
@@ -468,7 +477,7 @@
                               rotateZ(0deg) skew(0deg, 0deg);
                             transform-style: preserve-3d;
                           "
-                          href="#"
+                          href="https://t.me/+1ZQd22t3mydiNjIx"
                           target="_blank"
                           class="social-item is-tg w-inline-block"
                           ><img
