--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         "
                         >About</a
                       ><a
-                        href="#boshi-links"
+                        href="#rdegen-links"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -401,7 +401,7 @@
             </div>
           </div>
         </section>
-        <section id="boshi-links" class="section is-blue-gradient">
+        <section id="rdegen-links" class="section is-blue-gradient">
           <div class="padding-global">
             <div class="container-large">
               <div class="content-wrapper">
@@ -459,7 +459,7 @@
                               rotateZ(0deg) skew(0deg, 0deg);
                             transform-style: preserve-3d;
                           "
-                          href="#"
+                          href="https://x.com/RealDegensToken"
                           target="_blank"
                           class="social-item w-inline-block"
                           ><img
