--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="content-wrapper">
                   <div class="_2-columns is-header">
                     <a
-                      href="https://www.basedsatoshi.com/"
+                      href="#"
                       aria-current="page"
                       class="logo w-nav-brand w--current"
                       aria-label="home"
@@ -88,7 +88,7 @@
                     /></a>
                     <nav role="navigation" class="nav-menu w-nav-menu">
                       <a
-                        href="https://www.basedsatoshi.com/#about-us"
+                        href="#about-us"
                         class="nav-link is-first w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -98,7 +98,7 @@
                         "
                         >About</a
                       ><a
-                        href="https://www.basedsatoshi.com/#boshi-links"
+                        href="#boshi-links"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -108,7 +108,7 @@
                         "
                         >Socials</a
                       ><a
-                        href="https://www.basedsatoshi.com/#join-community"
+                        href="#join-community"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -118,7 +118,7 @@
                         "
                         >Community</a
                       ><a
-                        href="https://www.basedsatoshi.com/#"
+                        href="#faq"
                         class="nav-link w-nav-link"
                         style="
                           transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1)
@@ -154,7 +154,7 @@
                         data-duration="0"
                         data-ix2-initial-state="0"
                       >
-                        <svg
+                        <!-- <svg
                           xmlns="http://www.w3.org/2000/svg"
                           xmlns:xlink="http://www.w3.org/1999/xlink"
                           viewBox="0 0 400 400"
@@ -279,7 +279,7 @@
                               </g>
                             </g>
                           </g>
-                        </svg>
+                        </svg> -->
                       </div>
                     </div>
                   </div>
